# moonlight-pixelrun

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
public/assets/: .gitkeep
scripts/: .env.example  __init__.py  generate_music.cjs  generate_sprites.py  process_sprites.py  prompts.json
sprites/: prompts.json
src/: main.ts
src/game/: GameConfig.ts
src/game/constants/: GameConstants.ts  LevelConfig.ts
src/game/entities/: Collectible.ts  Obstacle.ts  Player.ts
src/game/scenes/: BootScene.ts  CharacterSelectScene.ts  GameOverScene.ts  GameScene.ts  InstructionsScene.ts  LevelSelectScene.ts  MenuScene.ts  PreloaderScene.ts  UIScene.ts
src/game/systems/: AudioSystem.ts  CollisionSystem.ts  EvolutionSystem.ts  InputSystem.ts  LaneSystem.ts  ParticleSystem.ts  SpawnSystem.ts
src/game/utils/: ObjectPool.ts
